# bozbalci-blog

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  docker-compose.local.yml  docker-compose.production.yml  fabfile.py  manage.py  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.js
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
blog/: admin.py  feeds.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_customflatpage_options_post.py  0003_post_modified.py
blog/templates/: base.html  base_with_sidebar.html  footer.html  home.html  index.html
blog/templates/blog/: archive.html  category.html  post.html
compose/production/: supervisord.conf
config/: __init__.py  api.py  celery_app.py  gunicorn.service  jinja2.py  nginx.conf  urls.py
config/settings/: base.py  local.py  production.py  test.py
core/: admin.py  constants.py  helpers.py  images.py  models.py
core/migrations/: 0001_initial.py  0002_imageupload_removed_from_s3.py  0003_tag_alter_imageupload_original_category.py  0004_alter_imageupload_original_and_more.py  0005_alter_imageupload_original_and_more.py  0007_feature_description.py
core/templatetags/: date_formats.py  render_markdown.py
docs/: deploying.md  getting-started.md  site-features.md  syncing-with-production.md
music/: admin.py  api.py  context_processors.py  lastfm.py  models.py  schemas.py  views.py
music/migrations/: 0001_initial.py
music/templatetags/: music_tags.py
notcms/: __init__.py  api.py  api_urls.py  asgi.py  jinja2.py  schemas.py  settings.py  urls.py  wsgi.py
notcms/blog/: admin.py  api.py  apps.py  blocks.py  context_processors.py  feeds.py  middleware.py  models.py  schemas.py  signals.py  templatetags.py  urls.py  views.py
notcms/core/: admin.py  apps.py  helpers.py  images.py  models.py  templatetags.py
notcms/music/: admin.py  api.py  apps.py  context_processors.py  lastfm.py  models.py  schemas.py  signals.py  tasks.py  templatetags.py  urls.py  views.py
notcms/photo/: admin.py  api.py  apps.py  helpers.py  models.py  schemas.py  templatetags.py  urls.py  views.py
notcms/settings/: base.py  dev.py  dev_postgres.py  prod.py
notcms/templates/: 400.html  403.html  404.html  500.html  base.html  base_error.html  base_with_sidebar.html  password.html  robots.txt
notcms/toys/: apps.py  urls.py  views.py
photo/: admin.py  api.py  models.py  schemas.py  views.py
photo/migrations/: 0002_alter_photo_id.py  0006_photoalbum_photo_albums.py
photo/templatetags/: lightgallery.py
static/css/: main.css  theme.css
static/scripts/: constants.js  lightbox-multi.js  lightbox-single.js  theme-toggle.js
static/styles/: main.css  theme.css  typography.css
templates/: 400.html  403.html  404.html  500.html  base.html  base_error.html
templates/blocks/: captioned_image.html  code.html  summary_details.html
templates/blog/: archive.html  blog_post_page.html  category.html  flat_page.html  home.html  home_page.html  post.html
templates/flatpages/: markdown_content.html
templates/music/: album_page.html  gallery.html  index.html  single_album_details.html
templates/partials/: footer.html  header.html  theme-toggle.html
templates/photo/: albums_index.html  gallery.html  index.html  photo_page.html  single_photo_details.html
templates/toys/: barbell.html
utils/: models.py  s3.py
(+213 files in other folders)
