[project]
name = "bozbalci-blog"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "django-cors-headers==4.7.0",
    "django-debug-toolbar==5.1.0",
    "django-ninja==1.4.1",
    "django-storages[s3]==1.14.6",
    "django-vite==3.1.0",
    "exifread==3.2.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2==3.1.6",
    "mistune==3.1.3",
    "pillow==11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sentry-sdk[django]>=2.27.0",
    "wagtail>=7.0",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "fabric>=3.2.2",
    "ruff>=0.11.7",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
