[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

[tool.djlint]
ignore="T003,H031"
indent=2

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[project]
name = "bozbalci-blog"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Berk Özbalcı", email = "webmaster@bozbalci.me"}
]
license = "MIT"
dependencies = [
    "celery[redis]>=5.5.2",
    "django==5.2.2",
    "django-celery-beat>=2.8.1",
    "django-cors-headers==4.7.0",
    "django-debug-toolbar==5.2.0",
    "django-environ>=0.12.0",
    "django-ninja>=1.4.1",
    "django-redis>=5.4.0",
    "django-storages[s3]==1.14.6",
    "django-vite==3.1.0",
    "exifread==3.3.1",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "sentry-sdk[django]>=2.27.0",
    "wagtail>=7.0",
    "wagtail-footnotes>=0.13.0",
    "wagtail-localize>=1.12.1",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "djlint>=1.36.4",
    "fabric>=3.2.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.11.11",
    "watchfiles>=1.0.5",
]
